[tool.poetry]
name = "punchme"
version = "0.1.0"
description = "Insperity auto-puncher"
authors = ["Alexander Oroudjev a.oroudjev@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "^5.2.0"
selenium = "^4.13.0"
wget = "^3.2"
pywin32 = "^306"


[tool.poetry.group.dev.dependencies]
deptry = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
